<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tvOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:textAlignment="textEnd"
        android:background="@color/colorGrey"
        android:paddingTop="10pt"
        android:textColor="@android:color/white"
        android:textSize="10pt"
        android:enabled="false" />

    <EditText
        android:id="@+id/tvShowValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorGrey"
        android:ems="10"
        android:enabled="false"
        android:paddingTop="10pt"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="20pt" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAC"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="otherButtonEvent"
                android:text="@string/ac"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonPlusMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="otherButtonEvent"
                android:text="@string/PlusMinus"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonPerc"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="otherButtonEvent"
                android:text="@string/Percentage"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:onClick="operationButtonEvent"
                android:text="@string/Div"
                android:tag="/"
                android:textSize="18sp"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="7"
                android:text="@string/_7"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="8"
                android:text="@string/_8"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="9"
                android:text="@string/_9"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonMultiple"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:onClick="operationButtonEvent"
                android:text="@string/Multiple"
                android:tag="*"
                android:textSize="18sp"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="4"
                android:text="@string/_4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="5"
                android:text="@string/_5"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="6"
                android:text="@string/_6"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:onClick="operationButtonEvent"
                android:text="@string/Minus"
                android:tag="-"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="1"
                android:text="@string/_1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="2"
                android:text="@string/_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/colorLightGrey"
                android:onClick="numberButtonEvent"
                android:tag="3"
                android:text="@string/_3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:onClick="operationButtonEvent"
                android:text="@string/Plus"
                android:tag="+"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginRight="1pt"
            android:layout_weight="7"
            android:background="@color/colorLightGrey"
            android:onClick="numberButtonEvent"
            android:tag="0"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_marginRight="1pt"
            android:layout_weight="1"
            android:background="@color/colorLightGrey"
            android:onClick="numberButtonEvent"
            android:text="."
            android:tag="."
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonEq"
            android:layout_width="30pt"
            android:layout_height="30pt"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:onClick="equalButtonEvent"
            android:text="="
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>